# institutional-vault-solana

./: LICENSE  README.md
Anchor/: Anchor.toml
Anchor/.github/workflows/: publish.yml  test.yml
Anchor/docs/: CLI.md  CONSTANTS.md  ERC-4626-REFERENCE.md  ERRORS.md  EVENTS.md  PATTERNS.md  README.md  SDK.md  SECURITY.md  specs-SVS13.md
Anchor/programs/svs-1/src/: lib.rs
Anchor/programs/svs-13/: Cargo.toml
Anchor/programs/svs-13-adapter-mock/: Cargo.toml
Anchor/programs/svs-13-adapter-mock/src/: lib.rs
Anchor/programs/svs-13/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  trustline.rs
Anchor/programs/svs-2/src/: lib.rs
Anchor/programs/svs-3/src/: lib.rs
Anchor/programs/svs-4/src/: lib.rs
Anchor/programs/trustline-validation-engine/: Cargo.toml
Anchor/programs/trustline-validation-engine/src/: lib.rs
Anchor/scripts/: init-svs13-usdc-trustline-devnet.ts
Anchor/scripts/shared/: common-helpers.ts
Anchor/sdk/core/: package.json
Anchor/sdk/privacy/src/: types.ts
Anchor/tests/: svs-13.ts
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  config.ts  index.css  index.tsx  types.ts
frontend/src/components/: AllocatorPanel.tsx  AuthorityPanel.tsx  Banner.tsx  CuratorPanel.tsx  HeaderBar.tsx  InvestorPanel.tsx  TabStrip.tsx  VaultHeroCard.tsx  VaultOverviewPanel.tsx  ui.tsx
frontend/src/services/: solanaVaultService.ts  trustlineService.ts  walletService.ts
websdk/: README.md  package-lock.json  package.json  tsconfig.json
websdk/src/: index.ts  solana.ts  trustline.ts  types.ts
(+11 files in other folders)
